--- a/src/global.css
+++ b/src/global.css
@@ -4,14 +4,14 @@
   --animate-aurora: aurora 60s linear infinite;
   @keyframes aurora {
     from {
-      background-position:
-        50% 50%,
-        50% 50%;
+      background-position: 50% 50%, 50% 50%;
     }
     to {
-      background-position:
-        350% 50%,
-        350% 50%;
+      background-position: 350% 50%, 350% 50%;
     }
   }
+}
+
+.ant-layout-sider-children {
+  background-color: white !important;
 }
