--- a/src/global.css
+++ b/src/global.css
@@ -11,3 +11,14 @@
     }
   }
 }
+.ant-form-item-label > label {
+  color: #60646e !important;
+  font-weight: 400 !important;
+  font-size: 13px !important;
+  line-height: 24px !important;
+  letter-spacing: 0% !important;
+  vertical-align: middle !important;
+}
+.ant-form-item {
+  margin-bottom: 15px !important;
+}
